@@ -48,7 +48,9 @@ class ApiEditPage extends ApiBase {
 		$params = $this->extractRequestParams();
 		if(is_null($params['title']))
 			$this->dieUsageMsg(array('missingparam', 'title'));
-		if(is_null($params['text']) && is_null($params['appendtext']) && is_null($params['prependtext']))
+		if(is_null($params['text']) && is_null($params['appendtext']) &&
+				is_null($params['prependtext']) &&
+				$params['undo'] == 0)
 			$this->dieUsageMsg(array('missingtext'));
 		if(is_null($params['token']))
 			$this->dieUsageMsg(array('missingparam', 'token'));
@@ -79,9 +81,39 @@ class ApiEditPage extends ApiBase {
 			$params['text'] = $params['prependtext'] . $content . $params['appendtext'];
 			$toMD5 = $params['prependtext'] . $params['appendtext'];
 		}
+		
+		if($params['undo'] > 0)
+		{
+			if($params['undoafter'] > 0)
+			{
+				if($params['undo'] < $params['undoafter'])
+					list($params['undo'], $params['undoafter']) =
+					array($params['undoafter'], $params['undo']);
+				$undoafterRev = Revision::newFromID($params['undoafter']);
+			}
+			$undoRev = Revision::newFromID($params['undo']);
+			if(is_null($undoRev) || $undoRev->isDeleted(Revision::DELETED_TEXT))
+				$this->dieUsageMsg(array('nosuchrevid', $params['undo']));
+			if($params['undoafter'] == 0)
+				$undoafterRev = $undoRev->getPrevious();
+			if(is_null($undoafterRev) || $undoafterRev->isDeleted(Revision::DELETED_TEXT))
+				$this->dieUsageMsg(array('nosuchrevid', $params['undoafter']));
+			if($undoRev->getPage() != $articleObj->getID())
+				$this->dieUsageMsg(array('revwrongpage', $undoRev->getID(), $titleObj->getPrefixedText()));
+			if($undoafterRev->getPage() != $articleObj->getID())
+				$this->dieUsageMsg(array('revwrongpage', $undoafterRev->getID(), $titleObj->getPrefixedText()));
+			$newtext = $articleObj->getUndoText($undoRev, $undoafterRev);
+			if($newtext === false)
+				$this->dieUsageMsg(array('undo-failure'));
+			$params['text'] = $newtext;
+			// If no summary was given and we only undid one rev,
+			// use an autosummary
+			if(is_null($params['summary']) && $titleObj->getNextRevisionID($undoafterRev->getID()) == $params['undo'])
+				$params['summary'] = wfMsgForContent('undo-summary', $params['undo'], $undoRev->getUserText());
+		}
 
 		# See if the MD5 hash checks out
-		if(isset($params['md5']))
+		if(!is_null($params['md5']))
 			if(md5($toMD5) !== $params['md5'])
 				$this->dieUsageMsg(array('hashcheckfailed'));
 		
@@ -140,9 +172,9 @@ class ApiEditPage extends ApiBase {
 		# Run hooks
 		# Handle CAPTCHA parameters
 		global $wgRequest;
-		if(isset($params['captchaid']))
+		if(!is_null($params['captchaid']))
 			$wgRequest->setVal( 'wpCaptchaId', $params['captchaid'] );
-		if(isset($params['captchaword']))
+		if(!is_null($params['captchaword']))
 			$wgRequest->setVal( 'wpCaptchaWord', $params['captchaword'] );
 		$r = array();
 		if(!wfRunHooks('APIEditBeforeSave', array(&$ep, $ep->textbox1, &$r)))
@@ -269,6 +301,12 @@ class ApiEditPage extends ApiBase {
 			'md5' => null,
 			'prependtext' => null,
 			'appendtext' => null,
+			'undo' => array(
+				ApiBase :: PARAM_TYPE => 'integer'
+			),
+			'undoafter' => array(
+				ApiBase :: PARAM_TYPE => 'integer'
+			),
 		);
 	}
 
@@ -300,13 +338,19 @@ class ApiEditPage extends ApiBase {
 			'prependtext' => array( 'Add this text to the beginning of the page. Overrides text.',
 						'Don\'t use together with section: that won\'t do what you expect.'),
 			'appendtext' => 'Add this text to the end of the page. Overrides text',
+			'undo' => 'Undo this revision. Overrides text, prependtext and appendtext',
+			'undoafter' => 'Undo all revisions from undo to this one. If not set, just undo one revision',
 		);
 	}
 
 	protected function getExamples() {
 		return array (
 			"Edit a page (anonymous user):",
-			"    api.php?action=edit&title=Test&summary=test%20summary&text=article%20content&basetimestamp=20070824123454&token=%2B\\"
+			"    api.php?action=edit&title=Test&summary=test%20summary&text=article%20content&basetimestamp=20070824123454&token=%2B\\",
+			"Prepend __NOTOC__ to a page (anonymous user):",
+			"    api.php?action=edit&title=Test&summary=NOTOC&minor&prependtext=__NOTOC__%0A&basetimestamp=20070824123454&token=%2B\\",
+			"Undo r13579 through r13585 with autosummary(anonymous user):",
+			"    api.php?action=edit&title=Test&undo=13585&undoafter=13579&basetimestamp=20070824123454&token=%2B\\",
 		);
 	}
 
